# langchain-workshop

./: .gitignore  README.md
notebook/: langchain-js.ipynb  langchain-py.ipynb
rag/: .gitignore  app.py  pyproject.toml
slidev/: package.json  pnpm-lock.yaml  slides.md
